# nomad-auto-xrd-RCI

./: .cruft.json  404.html  ARCO_VALIDATION_REPORT.md  QUICKSTART.md  QUICKSTART_SUMMARY.md  README.md  README.md.rej  index.html  pyproject.toml  pyproject.toml.rej  pytest.ini
.github/workflows/: arco-tests.yml
docs/explanation/: arco_rci_guide.md
examples/: README.md  arco_example.ipynb  arco_quickstart.py
examples/data/: sample_xrd_pattern.csv
explanation/: arco_rci_guide.html  explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
notebooks/: arco_sequence_demo.ipynb  arco_xrd_demo.ipynb
reference/: references.html
search/: search_index.json
src/nomad_auto_xrd/actions/simple_action/: __init__.py  activities.py  workflows.py
src/nomad_auto_xrd/common/: analysis.py  arco_integration.py  arco_rci.py  models.py
src/nomad_auto_xrd/lib/: __init__.py  arco_analysis.py  arco_rci.py
tests/: conftest.py  test_arco.py
tests/actions/: test_action.py
tutorial/: tutorial.html
