[build-system]
requires = [
    "setuptools>=61.0.0",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
name = "nomad-auto-xrd"
description = "A NOMAD plugin containing schemas for automatic XRD analysis."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Pepe Márquez", email = "jose.marquez@physik.hu-berlin.de" },
    { name = "Sarthak Kapoor", email = "sarthak.kapoor@physik.hu-berlin.de" },
]
maintainers = [
    { name = "FAIRmat", email = "fairmat@physik.hu-berlin.de" },
]
license = { file = "LICENSE" }
dependencies = [
    "nomad-lab[infrastructure]>=1.3.18.dev92",
    "nomad-analysis>=0.2.0",
    "nomad-measurements>=1.3.3",
    "nomad-schema-plugin-run>=1.0.1",
    "nomad-schema-plugin-simulation-workflow>=1.0.9",
    "pandas",
    "plotly",
    "psutil>=7.0.0",
]

[project.urls]
Repository = "https://github.com/FAIRmat-NFDI/nomad-auto-xrd"

[project.optional-dependencies]
analytics = [
    "python-magic-bin; sys_platform == 'win32'",
    "autoXRD @ git+https://github.com/njszym/XRD-AutoAnalyzer.git",
    "wandb",
    "pymatgen",
    "tensorflow>=2.16",
    "psutil>=7.0.0",
    "tqdm>=4.67.1",
]
dev = [
    "nomad-auto-xrd[analytics]",
    "ruff",
    "pytest",
    "structlog",
]
cpu-action = ["nomad-auto-xrd[analytics]"]

[tool.uv]
prerelease = "allow"  # Allows pre-release/dev versions
index-url = "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
    # pylint
    "PL",
]

ignore = [
    "F403", # 'from module import *' used; unable to detect undefined names
    "PLC0415", # `import` should be at the top-level of a file
]

fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["PLC0415"] # import-outside-top-level

# this is entirely optional, you can remove this if you wish to
[tool.ruff.format]
# use single quotes for strings.
quote-style = "single"

# indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.cruft]
# Avoid updating workflow files, this leads to permissions issues
skip = [".github/*"]

[project.entry-points.'nomad.plugin']
schema = "nomad_auto_xrd.schema_packages:schema_entry_point"
models_app = "nomad_auto_xrd.apps:models_app_entry_point"
example_upload = "nomad_auto_xrd.example_uploads:example_upload_entry_point"
auto_xrd_training_action = "nomad_auto_xrd.actions.training:training_action"
auto_xrd_training_wandb_action = "nomad_auto_xrd.actions.training_wandb:training_wandb_action"
auto_xrd_analysis_action = "nomad_auto_xrd.actions.analysis:analysis_action"